# icfpc2023

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cloudbuild.yaml  run_chokudai.bat  run_chokudai2.bat  score.csv  upload.txt
.cloudbuild/: deploy.yaml
.github/workflows/: main.yml
after_contest/: README.md  docker-compose.yml  mysql.Dockerfile
configs/: nginx.conf  service_account.json.encrypted  supervisord.conf
docker/: Makefile  builder.Dockerfile  runner.Dockerfile  server.Dockerfile  tools.Dockerfile
problems/: out-2-64a92df98c4efca8cb0a82d7.json  out-2-64a93f468c4efca8cb0a9c65.json  problem-10.json  problem-2.json  problem-5.json  problem-7.json  problem-8.json  problem-9.json
scripts/: deploy_binaries.sh  download_problems.py  exec.sh  setup_instance.sh
src/: api.rs  beam_candidate.rs  bigint_scoring.rs  candidate.rs  candidate2.rs  candidate_arc.rs  candidate_positions.rs  candidate_tree.rs  differential.rs  geom.rs  input_stats.rs  lib.rs  mcf.rs  mysql.rs  random_hillclimb.rs  scoring.rs  secret.rs  simple_hillclimb.rs  sql.rs  svg_to_png.rs  vis.rs
src/www/: mod.rs  utils.rs
src/www/handlers/: api_proxy.rs  cron.rs  mod.rs  my_submission.rs  my_submissions.rs  my_userboard.rs  problem.rs  problem_png.rs  submission.rs  submissions.rs  template.rs  visualize.rs
static/: style.css
testdata/: output-42.json  problem-42.json
vis/: Cargo.toml  build.sh  index.html
vis/src/: lib.rs
