[package]
name = "icfpc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
local = ["tokio", "reqwest"]

[dependencies]
itertools = "0.10.3"
once_cell = "1.13.1"
rand = "=0.7.3"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.0"
reqwest = { version = "0.11", features = ["json"], optional=true }
tokio = { version = "1", features = ["full"], optional=true }
svg = "0.13.1"
anyhow = "1.0.71"
glob = "0.3.0"

[profile.release]
debug = true
