[package]
name = "icfpc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio", "reqwest", "actix-web", "actix-files", "mysql"]

[dependencies]
itertools = "0.10.3"
once_cell = "1.13.1"
rand = "=0.7.3"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
indicatif = "0.17.0"
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
svg = "0.13.1"
anyhow = "1.0.71"
glob = "0.3.0"
clap = { version = "4.3", features = ["derive"] }
aes-gcm = "0.9"
aead = "0.3"
hex = "0.4"
actix-web = { version = "4.0.0-beta.9", optional = true }
actix-files = { version = "0.6.2", optional = true }
flatten-json-object = "0.6.1"
handlebars = "3"
mysql = { version = "20.1.0", optional = true }
num = "0.4.0"

[profile.release]
debug = true
